altlr_simple_test/target/generated-sources/antlr4/t4/FeatureParser.java
// Generated from t4/Feature.g4 by ANTLR 4.9.2
package t4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FeatureParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, DAY=8, LIMIT=9, 
		SECOND=10, MULTI_DIRECT=11, BINARY_LABEL=12, ORIGINAL=13, TIMEDIFF=14, 
		ISIN=15, COMBINE=16, DAYOFWEEK=17, HOUROFDAY=18, ISWEEKDAY=19, WINDOW_SUM=20, 
		STRING=21;
	public static final int
		RULE_parse = 0, RULE_feature_express = 1, RULE_expression = 2, RULE_inner_expression = 3, 
		RULE_express1 = 4, RULE_express2 = 5, RULE_express3 = 6, RULE_express4 = 7, 
		RULE_express5 = 8, RULE_express6 = 9, RULE_express7 = 10, RULE_single_window_express = 11, 
		RULE_variable_name = 12, RULE_key1 = 13, RULE_key2 = 14, RULE_key3 = 15, 
		RULE_key4 = 16, RULE_key5 = 17, RULE_key6 = 18, RULE_key7 = 19, RULE_key8 = 20, 
		RULE_time_express = 21, RULE_table_name = 22, RULE_field_name = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "feature_express", "expression", "inner_expression", "express1", 
			"express2", "express3", "express4", "express5", "express6", "express7", 
			"single_window_express", "variable_name", "key1", "key2", "key3", "key4", 
			"key5", "key6", "key7", "key8", "time_express", "table_name", "field_name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "','", "'.'", "'d:'", "':'", "'s'", null, null, null, 
			"'multi_direct'", "'binary_label'", "'original'", "'timediff'", "'isin'", 
			"'combine'", "'dayofweek'", "'hourofday'", "'isweekday'", "'window_sum'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "DAY", "LIMIT", "SECOND", 
			"MULTI_DIRECT", "BINARY_LABEL", "ORIGINAL", "TIMEDIFF", "ISIN", "COMBINE", 
			"DAYOFWEEK", "HOUROFDAY", "ISWEEKDAY", "WINDOW_SUM", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Feature.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FeatureParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public Feature_expressContext feature_express() {
			return getRuleContext(Feature_expressContext.class,0);
		}
		public TerminalNode EOF() { return getToken(FeatureParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeatureVisitor ) return ((FeatureVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			feature_express();
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Feature_expressContext extends ParserRuleContext {
		public Key1Context key1() {
			return getRuleContext(Key1Context.class,0);
		}
		public List<Variable_nameContext> variable_name() {
			return getRuleContexts(Variable_nameContext.class);
		}
		public Variable_nameContext variable_name(int i) {
			return getRuleContext(Variable_nameContext.class,i);
		}
		public Key2Context key2() {
			return getRuleContext(Key2Context.class,0);
		}
		public Inner_expressionContext inner_expression() {
			return getRuleContext(Inner_expressionContext.class,0);
		}
		public Key3Context key3() {
			return getRuleContext(Key3Context.class,0);
		}
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public Key4Context key4() {
			return getRuleContext(Key4Context.class,0);
		}
		public Key5Context key5() {
			return getRuleContext(Key5Context.class,0);
		}
		public Key6Context key6() {
			return getRuleContext(Key6Context.class,0);
		}
		public Key7Context key7() {
			return getRuleContext(Key7Context.class,0);
		}
		public Key8Context key8() {
			return getRuleContext(Key8Context.class,0);
		}
		public Time_expressContext time_express() {
			return getRuleContext(Time_expressContext.class,0);
		}
		public Feature_expressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feature_express; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterFeature_express(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitFeature_express(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeatureVisitor ) return ((FeatureVisitor<? extends T>)visitor).visitFeature_express(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Feature_expressContext feature_express() throws RecognitionException {
		Feature_expressContext _localctx = new Feature_expressContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_feature_express);
		try {
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				key1();
				setState(52);
				match(T__0);
				setState(53);
				variable_name();
				setState(54);
				match(T__1);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				key2();
				setState(57);
				match(T__0);
				setState(58);
				inner_expression();
				setState(59);
				match(T__1);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(61);
				key3();
				setState(62);
				match(T__0);
				setState(63);
				table_name();
				setState(64);
				match(T__2);
				setState(65);
				variable_name();
				setState(66);
				match(T__1);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(68);
				key4();
				setState(69);
				match(T__0);
				setState(70);
				variable_name();
				setState(71);
				match(T__2);
				setState(72);
				variable_name();
				setState(73);
				match(T__1);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(75);
				key5();
				setState(76);
				match(T__0);
				setState(77);
				variable_name();
				setState(78);
				match(T__2);
				setState(79);
				inner_expression();
				setState(80);
				match(T__1);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(82);
				key6();
				setState(83);
				match(T__0);
				setState(84);
				table_name();
				setState(85);
				match(T__2);
				setState(86);
				variable_name();
				setState(87);
				match(T__1);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(89);
				match(T__0);
				setState(90);
				variable_name();
				setState(91);
				match(T__1);
				setState(92);
				key7();
				setState(93);
				match(T__0);
				setState(94);
				variable_name();
				setState(95);
				match(T__1);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(97);
				key8();
				setState(98);
				match(T__0);
				setState(99);
				variable_name();
				setState(100);
				match(T__2);
				setState(101);
				variable_name();
				setState(102);
				match(T__2);
				setState(103);
				time_express();
				setState(104);
				match(T__2);
				setState(105);
				variable_name();
				setState(106);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Key1Context key1() {
			return getRuleContext(Key1Context.class,0);
		}
		public List<Variable_nameContext> variable_name() {
			return getRuleContexts(Variable_nameContext.class);
		}
		public Variable_nameContext variable_name(int i) {
			return getRuleContext(Variable_nameContext.class,i);
		}
		public Key2Context key2() {
			return getRuleContext(Key2Context.class,0);
		}
		public Inner_expressionContext inner_expression() {
			return getRuleContext(Inner_expressionContext.class,0);
		}
		public Key4Context key4() {
			return getRuleContext(Key4Context.class,0);
		}
		public Key5Context key5() {
			return getRuleContext(Key5Context.class,0);
		}
		public Key7Context key7() {
			return getRuleContext(Key7Context.class,0);
		}
		public Key8Context key8() {
			return getRuleContext(Key8Context.class,0);
		}
		public Time_expressContext time_express() {
			return getRuleContext(Time_expressContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeatureVisitor ) return ((FeatureVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expression);
		try {
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ORIGINAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				key1();
				setState(111);
				match(T__0);
				setState(112);
				variable_name();
				setState(113);
				match(T__1);
				}
				break;
			case BINARY_LABEL:
			case DAYOFWEEK:
			case HOUROFDAY:
			case ISWEEKDAY:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				key2();
				setState(116);
				match(T__0);
				setState(117);
				inner_expression();
				setState(118);
				match(T__1);
				}
				break;
			case TIMEDIFF:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				key4();
				setState(121);
				match(T__0);
				setState(122);
				variable_name();
				setState(123);
				match(T__2);
				setState(124);
				variable_name();
				setState(125);
				match(T__1);
				}
				break;
			case COMBINE:
				enterOuterAlt(_localctx, 4);
				{
				setState(127);
				key5();
				setState(128);
				match(T__0);
				setState(129);
				variable_name();
				setState(130);
				match(T__2);
				setState(131);
				inner_expression();
				setState(132);
				match(T__1);
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 5);
				{
				setState(134);
				match(T__0);
				setState(135);
				variable_name();
				setState(136);
				match(T__1);
				setState(137);
				key7();
				setState(138);
				match(T__0);
				setState(139);
				variable_name();
				setState(140);
				match(T__1);
				}
				break;
			case WINDOW_SUM:
				enterOuterAlt(_localctx, 6);
				{
				setState(142);
				key8();
				setState(143);
				match(T__0);
				setState(144);
				variable_name();
				setState(145);
				match(T__2);
				setState(146);
				variable_name();
				setState(147);
				match(T__2);
				setState(148);
				time_express();
				setState(149);
				match(T__2);
				setState(150);
				variable_name();
				setState(151);
				match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Inner_expressionContext extends ParserRuleContext {
		public Key3Context key3() {
			return getRuleContext(Key3Context.class,0);
		}
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public Variable_nameContext variable_name() {
			return getRuleContext(Variable_nameContext.class,0);
		}
		public Inner_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inner_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterInner_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitInner_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeatureVisitor ) return ((FeatureVisitor<? extends T>)visitor).visitInner_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Inner_expressionContext inner_expression() throws RecognitionException {
		Inner_expressionContext _localctx = new Inner_expressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_inner_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			key3();
			setState(156);
			match(T__0);
			setState(157);
			table_name();
			setState(158);
			match(T__2);
			setState(159);
			variable_name();
			setState(160);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Express1Context extends ParserRuleContext {
		public Key1Context key1() {
			return getRuleContext(Key1Context.class,0);
		}
		public Variable_nameContext variable_name() {
			return getRuleContext(Variable_nameContext.class,0);
		}
		public Express1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_express1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterExpress1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitExpress1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeatureVisitor ) return ((FeatureVisitor<? extends T>)visitor).visitExpress1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Express1Context express1() throws RecognitionException {
		Express1Context _localctx = new Express1Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_express1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			key1();
			setState(163);
			match(T__0);
			setState(164);
			variable_name();
			setState(165);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Express2Context extends ParserRuleContext {
		public Key2Context key2() {
			return getRuleContext(Key2Context.class,0);
		}
		public Express3Context express3() {
			return getRuleContext(Express3Context.class,0);
		}
		public Express2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_express2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterExpress2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitExpress2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeatureVisitor ) return ((FeatureVisitor<? extends T>)visitor).visitExpress2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Express2Context express2() throws RecognitionException {
		Express2Context _localctx = new Express2Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_express2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			key2();
			setState(168);
			match(T__0);
			setState(169);
			express3();
			setState(170);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Express3Context extends ParserRuleContext {
		public Key3Context key3() {
			return getRuleContext(Key3Context.class,0);
		}
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public Variable_nameContext variable_name() {
			return getRuleContext(Variable_nameContext.class,0);
		}
		public Express3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_express3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterExpress3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitExpress3(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeatureVisitor ) return ((FeatureVisitor<? extends T>)visitor).visitExpress3(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Express3Context express3() throws RecognitionException {
		Express3Context _localctx = new Express3Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_express3);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			key3();
			setState(173);
			match(T__0);
			setState(174);
			table_name();
			setState(175);
			match(T__2);
			setState(176);
			variable_name();
			setState(177);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Express4Context extends ParserRuleContext {
		public Key4Context key4() {
			return getRuleContext(Key4Context.class,0);
		}
		public List<Variable_nameContext> variable_name() {
			return getRuleContexts(Variable_nameContext.class);
		}
		public Variable_nameContext variable_name(int i) {
			return getRuleContext(Variable_nameContext.class,i);
		}
		public Express4Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_express4; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterExpress4(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitExpress4(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeatureVisitor ) return ((FeatureVisitor<? extends T>)visitor).visitExpress4(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Express4Context express4() throws RecognitionException {
		Express4Context _localctx = new Express4Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_express4);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			key4();
			setState(180);
			match(T__0);
			setState(181);
			variable_name();
			setState(182);
			match(T__2);
			setState(183);
			variable_name();
			setState(184);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Express5Context extends ParserRuleContext {
		public Key5Context key5() {
			return getRuleContext(Key5Context.class,0);
		}
		public Variable_nameContext variable_name() {
			return getRuleContext(Variable_nameContext.class,0);
		}
		public Express6Context express6() {
			return getRuleContext(Express6Context.class,0);
		}
		public Express5Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_express5; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterExpress5(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitExpress5(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeatureVisitor ) return ((FeatureVisitor<? extends T>)visitor).visitExpress5(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Express5Context express5() throws RecognitionException {
		Express5Context _localctx = new Express5Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_express5);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			key5();
			setState(187);
			match(T__0);
			setState(188);
			variable_name();
			setState(189);
			match(T__2);
			setState(190);
			express6();
			setState(191);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Express6Context extends ParserRuleContext {
		public Key6Context key6() {
			return getRuleContext(Key6Context.class,0);
		}
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public Variable_nameContext variable_name() {
			return getRuleContext(Variable_nameContext.class,0);
		}
		public Express6Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_express6; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterExpress6(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitExpress6(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeatureVisitor ) return ((FeatureVisitor<? extends T>)visitor).visitExpress6(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Express6Context express6() throws RecognitionException {
		Express6Context _localctx = new Express6Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_express6);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			key6();
			setState(194);
			match(T__0);
			setState(195);
			table_name();
			setState(196);
			match(T__2);
			setState(197);
			variable_name();
			setState(198);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Express7Context extends ParserRuleContext {
		public List<Variable_nameContext> variable_name() {
			return getRuleContexts(Variable_nameContext.class);
		}
		public Variable_nameContext variable_name(int i) {
			return getRuleContext(Variable_nameContext.class,i);
		}
		public Key7Context key7() {
			return getRuleContext(Key7Context.class,0);
		}
		public Express7Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_express7; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterExpress7(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitExpress7(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeatureVisitor ) return ((FeatureVisitor<? extends T>)visitor).visitExpress7(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Express7Context express7() throws RecognitionException {
		Express7Context _localctx = new Express7Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_express7);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(200);
			match(T__0);
			setState(201);
			variable_name();
			setState(202);
			match(T__1);
			setState(203);
			key7();
			setState(204);
			match(T__0);
			setState(205);
			variable_name();
			setState(206);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Single_window_expressContext extends ParserRuleContext {
		public Key8Context key8() {
			return getRuleContext(Key8Context.class,0);
		}
		public List<Variable_nameContext> variable_name() {
			return getRuleContexts(Variable_nameContext.class);
		}
		public Variable_nameContext variable_name(int i) {
			return getRuleContext(Variable_nameContext.class,i);
		}
		public Time_expressContext time_express() {
			return getRuleContext(Time_expressContext.class,0);
		}
		public Single_window_expressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_window_express; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterSingle_window_express(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitSingle_window_express(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeatureVisitor ) return ((FeatureVisitor<? extends T>)visitor).visitSingle_window_express(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Single_window_expressContext single_window_express() throws RecognitionException {
		Single_window_expressContext _localctx = new Single_window_expressContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_single_window_express);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(208);
			key8();
			setState(209);
			match(T__0);
			setState(210);
			variable_name();
			setState(211);
			match(T__2);
			setState(212);
			variable_name();
			setState(213);
			match(T__2);
			setState(214);
			time_express();
			setState(215);
			match(T__2);
			setState(216);
			variable_name();
			setState(217);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
